Fix colors contrast

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,8 +2,8 @@
 @import url('../vendor/bootstrap-grid.css');
 
 $custom-gray-light:#F7F7F7;
-$custom-gray: #818485;
-$custom-blue: #86d9f7;
+$custom-gray: #757575;
+$custom-blue: #009ADB;
 
 * {
   box-sizing: border-box;
